tests/NormalTests/paczka1/fuzzy1/19873278.err
Error in line 4: 9Sraq9 S444 83,9
Error in line 12: lKNY1v S444 80,5
Error in line 19: 9Sraq9 S444 32,4
Error in line 20: lKNY1v A685 86,6
Error in line 21: jzb8luEQROP S444 65,1
Error in line 40: lKNY1v S109 2u,8
